--- a/vaccine_effectiveness_analytical_pipeline/output/3_imputation.html
+++ b/vaccine_effectiveness_analytical_pipeline/output/3_imputation.html
@@ -3136,7 +3136,7 @@ FALSE
 FALSE
 </td>
 <td style="text-align:center;">
-FALSE
+TRUE
 </td>
 <td style="text-align:center;">
 TRUE
@@ -4030,10 +4030,10 @@ flag_listwise_del==FALSE
 <tbody>
 <tr>
 <td style="text-align:center;">
-12931
+217
 </td>
 <td style="text-align:center;">
-637069
+9783
 </td>
 </tr>
 </tbody>
